bad/mod_invalid_types_array_int.example_compiler_output
ERROR
[1mbad/mod_invalid_types_array_int.lat:3:13: [1;31merror: [0;1mmodulo is defined only for int values, not `int[]` and `int`[m
	new int[3] % 13;
	           [1;32m^[m
